--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ kotlin.stdlib.default.dependency=false
 pluginGroup = co.anbora.labs
 pluginName = Export to zip
 # SemVer format -> https://semver.org
-pluginVersion = 1.1.1
+pluginVersion = 1.1.2
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 252
-pluginUntilBuild = 252.*
+pluginSinceBuild = 253
+pluginUntilBuild = 253.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
-platformVersion = 2025.2
+platformType = IU
+platformVersion = 253.20558.43
 #platformVersion = LATEST-EAP-SNAPSHOT
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
@@ -25,7 +25,7 @@ platformBundledPlugins =
 gradleVersion = 8.8
 
 # === Java version ===
-javaVersion = 17
+javaVersion = 21
 
 # ==== Proguard configs ===
 # Skip proguad when build or run, useful for debug
